@@ -4,6 +4,7 @@ TGUI 0.7.6  (TBD)
 - Fixed compilation with TDM-GCC 5.1
 - Knob did not display correctly when using textures
 - Fixed crash in layouts in specific case with GCC 7
+- ChildWindow::setTitleButtons did not accept combinations of buttons
 
 
 TGUI 0.7.5  (11 September 2017)
